--- a/index.html
+++ b/index.html
@@ -61,9 +61,46 @@
       color: #333;
       cursor: pointer;
     }
+
+    .start-game {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+
+    .rules-window {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 300px;
+      height: 300px;
+      background-color: #fff;
+      border: 2px solid #333;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      font-size: 18px;
+      color: #333;
+    }
+
+    .close-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #333;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
+  <button class="start-game" onclick="startGame()">Start Game</button>
+
   <div class="game-container">
     <div id="player1" class="character"></div>
     <div id="player2" class="character"></div>
@@ -76,23 +113,46 @@
     <div class="touch-button" data-direction="right">→</div>
   </div>
 
+  <div class="rules-window" id="rulesWindow">
+    <h2>How to Play</h2>
+    <p>Use the arrow buttons or touch controls to move Player 1.</p>
+    <p>Player 2 (AI) will move randomly.</p>
+    <p>Avoid collision with Player 2 to win.</p>
+    <button class="close-button" onclick="closeRules()">Close</button>
+  </div>
+
   <script>
     var player1 = document.getElementById("player1");
     var player2 = document.getElementById("player2");
     var stepSize = 10;
+    var gameStarted = false;
 
-    // Touchscreen Controls
+    // Keyboard Controls
+    document.addEventListener("keydown", function(event) {
+      if (gameStarted) {
+        moveCharacter(event.keyCode);
+      }
+    });
+
+    // Touch Screen Controls
     var touchButtons = document.querySelectorAll(".touch-button");
     touchButtons.forEach(function(button) {
-      button.addEventListener("touchstart", function(event) {
-        event.preventDefault();
-        var direction = button.getAttribute("data-direction");
-        moveCharacter(direction);
+      button.addEventListener("click", function() {
+        if (gameStarted) {
+          var direction = button.getAttribute("data-direction");
+          moveCharacter(direction);
+        }
       });
     });
 
+    // Start Game
+    function startGame() {
+      gameStarted = true;
+      document.querySelector(".start-game").style.display = "none";
+    }
+
+    // Move Player 1
     function moveCharacter(direction) {
-      // Player 1 Movement
       if (direction === "up") {
         moveUp(player1, stepSize);
       } else if (direction === "down") {
@@ -102,39 +162,11 @@
       } else if (direction === "right") {
         moveRight(player1, stepSize);
       }
-
-      // AI Movement (Player 2)
-      var aiDirection = getRandomDirection();
-      moveCharacterAI(player2, aiDirection, stepSize);
     }
 
-    function moveUp(element, stepSize) {
-      var topPos = parseInt(element.style.top) - stepSize;
-      element.style.top = topPos + "px";
-    }
-
-    function moveDown(element, stepSize) {
-      var topPos = parseInt(element.style.top) + stepSize;
-      element.style.top = topPos + "px";
-    }
-
-    function moveLeft(element, stepSize) {
-      var leftPos = parseInt(element.style.left) - stepSize;
-      element.style.left = leftPos + "px";
-    }
-
-    function moveRight(element, stepSize) {
-      var leftPos = parseInt(element.style.left) + stepSize;
-      element.style.left = leftPos + "px";
-    }
-
-    function getRandomDirection() {
-      var directions = ["up", "down", "left", "right"];
-      var randomIndex = Math.floor(Math.random() * directions.length);
-      return directions[randomIndex];
-    }
-
-    function moveCharacterAI(element, direction, stepSize) {
+    // AI Movement
+    function moveCharacterAI(element, stepSize) {
+      var direction = getRandomDirection();
       if (direction === "up") {
         moveUp(element, stepSize);
       } else if (direction === "down") {
@@ -145,7 +177,58 @@
         moveRight(element, stepSize);
       }
     }
+
+    // Random Direction for AI Movement
+    function getRandomDirection() {
+      var directions = ["up", "down", "left", "right"];
+      var randomIndex = Math.floor(Math.random() * directions.length);
+      return directions[randomIndex];
+    }
+
+    // Collision Detection
+    function checkCollision() {
+      var player1Rect = player1.getBoundingClientRect();
+      var player2Rect = player2.getBoundingClientRect();
+
+      if (
+        player1Rect.left < player2Rect.right &&
+        player1Rect.right > player2Rect.left &&
+        player1Rect.top < player2Rect.bottom &&
+        player1Rect.bottom > player2Rect.top
+      ) {
+        gameOver();
+      }
+    }
+
+    // Game Over
+    function gameOver() {
+      gameStarted = false;
+      alert("Game Over");
+    }
+
+    // Game Loop
+    function gameLoop() {
+      if (gameStarted) {
+        moveCharacterAI(player2, stepSize);
+        checkCollision();
+        requestAnimationFrame(gameLoop);
+      }
+    }
+
+    // Open Rules Window
+    function openRules() {
+      document.getElementById("rulesWindow").style.display = "block";
+    }
+
+    // Close Rules Window
+    function closeRules() {
+      document.getElementById("rulesWindow").style.display = "none";
+    }
+
+    // Start the Game Loop
+    gameLoop();
   </script>
 </body>
 </html>
+
 
