--- a/ccs.html
+++ b/ccs.html
@@ -1,1 +1,19 @@
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
+
+h1 {
+  color: #ff0000;
+}
+
+#options {
+  margin-top: 20px;
+}
+
+button {
+  margin: 10px;
+}
 
